--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,77 @@
+# Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+
+# Environment variables
 .env
+.env.local
+.env.production
+
+# Agentic framework data
+data/conversation_memory.db
+data/cache/
+data/vectorstore/
+data/chromadb/
+data/fetched_messages/
+data/discord_messages_v2.json
+data/test_*/
+data/debug_*/
+*.db
+*.sqlite3
+*.log
+logs/
+
+# Backup and legacy files
+.backup/
+docs/legacy/
+data/legacy/
+
+# Snapshots (migration safety backups)
+.snapshots/
+*.tar.gz
+*.backup
+
+# Virtual environment
+venv/
+env/
+
+# Development and testing
+.pytest_cache/
+test_results.txt
+query_test_results.json
+.coverage
+debug/*.log
+debug/test_*.json
+
+# IDE and OS files
+.DS_Store
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Deployment
+.render/
+
+# Legacy archive (post-migration)
+legacy_archive/
+
+# Final cleanup additions
+# Final cleanup - temporary files
+*.tmp
+*_temp_*
+
+# Development artifacts
+*.debug
+
+# Backups
+backup_*/
+*_backup_*/
+
+# Legacy files (keeping for compatibility)
 discord_messages.json
 Leeme_JC.txt
-venv/
-discord_messages.db
-.DS_Store
 jc_logs/
